bin/testsuite/tests/compiler/src/errors/compiler3116.swg
#global testerror "Err0120"
struct AA3116 {}

public func toto3116()->**AA3116
{
    return null
}
